--- a/SEA_Application/Views/Receipts/Edit.cshtml
+++ b/SEA_Application/Views/Receipts/Edit.cshtml
@@ -50,7 +50,7 @@ else
 
             <div class="row">
 
-                <input type="hidden" name="name" id="CourseTypeHidden" value="@Model.Course" />
+                @*<input type="hidden" name="name" id="CourseTypeHidden" value="@Model.Course" />*@
                 <input type="hidden" name="Id" id="" value="@Model.Id" />
                 <input type="hidden" name="" id="HiddenValueReceivedFrom" value="@Model.ReceivedFrom" />
                 <input type="hidden" name="" id="HiddenValueUserId" value="@Model.UserId" />
